間違いの修正

--- a/仕様書.md
+++ b/仕様書.md
@@ -139,9 +139,10 @@ CocoroCore は FastAPI アプリケーションとして動作し、以下のエ
 }
 
 // レスポンス例（SSE）
-data: {"text": "こんにちは！", "finished": false}
-data: {"text": "今日はどうされましたか？", "finished": false}  
-data: {"text": "", "finished": true}
+data: {"type": "content", "content": "こんにちは！", "role": "assistant"}
+data: {"type": "content", "content": "今日はどうされましたか？", "role": "assistant"}
+data: {"type": "memory", "action": "saved", "details": "会話を記憶しました"}
+data: [DONE]
 ```
 
 ### 5.2 CocoroCore 管理エンドポイント
